[project]
name = "das-pipeline"
version = "0.1.0"
dependencies = [
    "typer",
    "pydantic",
    "dascore",
    "obspy",
    "pyyaml",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "typing_extensions",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
das-pipeline = "das_pipeline.cli:app"